@@ -30,7 +30,7 @@ from ClusterShell.NodeSet import NodeSet, RangeSet
 import socket
 
 def instantiate_lustrefs(fs_conf, target_types=None, nodes=None, excluded=None,
-        failover_node=None, indexes=None, labels=None, groups=None,
+        failover=None, indexes=None, labels=None, groups=None,
         event_handler=None):
     """
     Instantiate shine Lustre filesystem classes from configuration.
@@ -63,9 +63,7 @@ def instantiate_lustrefs(fs_conf, target_types=None, nodes=None, excluded=None,
         target_action_enabled = True
         if (target_types is not None and cf_t_type not in target_types) or \
             (indexes is not None and cf_t_index not in indexes) or \
-            (groups is not None and (cf_t_group is None or cf_t_group not in groups)) or \
-            (nodes is not None and server not in nodes) or \
-            (excluded is not None and server in excluded):
+            (groups is not None and (cf_t_group is None or cf_t_group not in groups)):
                 target_action_enabled = False
 
         target = fs.new_target(server, cf_t_type, cf_t_index, cf_t_dev, cf_t_jdev,
@@ -79,6 +77,16 @@ def instantiate_lustrefs(fs_conf, target_types=None, nodes=None, excluded=None,
         ha_nodes = cf_target.ha_nodes()
         for ha_node in cf_target.ha_nodes():
             target.add_server(Server(ha_node, fs_conf.get_nid(ha_node)))
+
+        # Change current server if failover nodes are used.
+        if failover and len(failover):
+            target.failover(failover)
+
+        # Now that server is set, check explicit nodes and exclusion
+        if (nodes is not None and target.server not in nodes) or \
+           (excluded is not None and target.server in excluded):
+              target.action_enabled = False
+            
 
     # Create attached file system clients...
     for client_node, mount_path in fs_conf.iter_clients():
@@ -131,7 +139,7 @@ def create_lustrefs(fs_model_file, event_handler=None, nodes=None, excluded=None
 
 
 def open_lustrefs(fs_name, target_types=None, nodes=None, excluded=None,
-          failover_node=None, indexes=None, labels=None, groups=None,
+          failover=None, indexes=None, labels=None, groups=None,
           event_handler=None):
     """
     Helper function used to build an instantiated Lustre.FileSystem
@@ -144,7 +152,7 @@ def open_lustrefs(fs_name, target_types=None, nodes=None, excluded=None,
         target_types = target_types.split(',')
 
     fs = instantiate_lustrefs(fs_conf, target_types, nodes, excluded,
-                              failover_node, indexes, labels, groups,
+                              failover, indexes, labels, groups,
                               event_handler)
 
     return fs_conf, fs
